--- a/appspec.yml
+++ b/appspec.yml
@@ -12,9 +12,9 @@ hooks:
       runas: root
   ApplicationStart:
     - location: hooks/application_start.sh
-      timeout: 10000
-      runas: root
-  ValidateService:
-    - location: hooks/validate_service.sh
       timeout: 300
       runas: root
+#  ValidateService:
+#    - location: hooks/validate_service.sh
+#      timeout: 300
+#      runas: root
